# AnyCheck

./: .gitignore  IMPLEMENTATION_PLAN.md  a.md
.github/workflows/: build.yml
HunterRuntime/: .gitignore  .gitmodules  HunterRuntime.xmind  RuntimeBuilderConfig.json  build.gradle  settings.gradle
HunterRuntime/HunterApi/: build.gradle
HunterRuntime/HunterApi/src/main/: AndroidManifest.xml
HunterRuntime/HunterApi/src/main/res/values/: strings.xml
HunterRuntime/LspLant/: build.gradle
HunterRuntime/LspLant/src/main/: AndroidManifest.xml
HunterRuntime/common/src/main/java/com/hunter/buildsrc/: RunTimeConstants.java
HunterRuntime/container-builder/: .gitignore  build.gradle
HunterRuntime/container-builder/src/main/java/android/content/res/: XmlResourceParser.java
HunterRuntime/container-builder/src/main/java/android/util/: TypedValue.java
HunterRuntime/container-builder/src/main/java/brut/androlib/: Androlib.java  AndrolibException.java  ApkDecoder.java  ApkOptions.java  ApktoolProperties.java
HunterRuntime/container-builder/src/main/java/brut/androlib/err/: AXmlDecodingException.java  CantFind9PatchChunkException.java  CantFindFrameworkResException.java  InFileNotFoundException.java  OutDirExistsException.java  RawXmlEncounteredException.java  UndefinedResObjectException.java
HunterRuntime/container-builder/src/main/java/brut/androlib/meta/: ClassSafeConstructor.java  EscapedStringRepresenter.java  MetaInfo.java  PackageInfo.java  UsesFramework.java  VersionInfo.java  YamlStringEscapeUtils.java
HunterRuntime/container-builder/src/main/java/brut/androlib/mod/: SmaliMod.java
HunterRuntime/container-builder/src/main/java/brut/androlib/options/: BuildOptions.java
HunterRuntime/container-builder/src/main/java/brut/androlib/res/: AndrolibResources.java
HunterRuntime/container-builder/src/main/java/brut/androlib/src/: SmaliBuilder.java  SmaliDecoder.java
HunterRuntime/container-builder/src/main/java/brut/apktool/: Main.java
HunterRuntime/container-builder/src/main/java/brut/common/: BrutException.java  InvalidUnknownFileException.java  RootUnknownFileException.java  TraversalUnknownFileException.java
HunterRuntime/container-builder/src/main/java/brut/directory/: AbstractDirectory.java  DirUtil.java  Directory.java  DirectoryException.java  ExtFile.java  FileDirectory.java  PathAlreadyExists.java  PathNotExist.java  ZipRODirectory.java  ZipUtils.java
HunterRuntime/container-builder/src/main/java/brut/util/: AaptManager.java  BrutIO.java  DataInputDelegate.java  Duo.java  ExtDataInput.java  Jar.java  OS.java  OSDetection.java
HunterRuntime/container-builder/src/main/java/com/android/apksig/: ApkSigner.java  ApkSignerEngine.java  ApkVerificationIssue.java  ApkVerifier.java  Constants.java  DefaultApkSignerEngine.java  Hints.java  SigningCertificateLineage.java  SourceStampVerifier.java
HunterRuntime/container-builder/src/main/java/com/zhenxi/builder/: AndroidJarUtil.java  ApkSignatureHelper.java  ApplicationInsertHandler.java  AttributeItem.java  BuildParamMeta.java  ContainerBuilder.java  DexMergeFailedException.java  DexSplitter.java  ManifestHandlers.java  PackageTrie.java  Param.java  ReNameEntry.java  RunMain.java  RuntimeBuilderContext.java  ShellDetector.java  SmaliRebuildFailedException.java  (+2 more)
HunterRuntime/container-builder/src/main/resources/assets/: ZhenxiPublic.xml
HunterRuntime/container-runtime/: build.gradle  proguard-rules.pro
HunterRuntime/container-runtime/src/main/: AndroidManifest.xml
HunterRuntime/container-runtime/src/main/cpp/: CMakeLists.txt  main.cpp
HunterRuntime/container-runtime/src/main/cpp/include/: HookClassUtils.h  IORelocator.h  JnitraceForC.h  SandboxFs.h  stringHandler2.h  testHandler.h
HunterRuntime/container-runtime/src/main/cpp/runtime/: IORelocator.cpp
HunterRuntime/container-runtime/src/main/cpp/runtime/extra/: CMakeLists.txt  HideMaps.cpp
HunterRuntime/container-runtime/src/main/cpp/runtime/sandbox/: CMakeLists.txt  SandboxFs.cpp  canonicalize_md.c  canonicalize_md.h
HunterRuntime/container-runtime/src/main/cpp/test/: CMakeLists.txt  test.cpp
HunterRuntime/container-runtime/src/main/cpp/test/crc/: cfrida.cpp  cfrida.h
HunterRuntime/container-runtime/src/main/res/layout/: activity_main.xml
HunterRuntime/container-runtime/src/main/res/values/: colors.xml  strings.xml  styles.xml
HunterRuntime/gradle/wrapper/: gradle-wrapper.properties
HunterRuntime/magisk_module/: .gitignore  build.gradle  config.gradle  proguard-rules.pro  services
HunterRuntime/magisk_module/src/main/java/android/app/: AndroidAppHelper.java
HunterRuntime/magisk_module/src/main/jni/: CMakeLists.txt  MagiskRuntime.cpp  zygisk_stub.cpp
HunterRuntime/magisk_module/src/main/jni/foundation/base/: CMakeLists.txt  binder.cpp  well_known_classes.cpp
HunterRuntime/magisk_module/src/main/jni/foundation/dexloader/: CMakeLists.txt  DexLoader.cpp
HunterRuntime/magisk_module/src/main/jni/include/: DexLoader.h  MagiskRuntime.h  Test.h  action.h  binder.h  config_bridge.h  context.h  macros.h  well_known_classes.h  zygisk.hpp
HunterRuntime/magisk_module/src/main/jni/test/: Base64Utils.cpp  Base64Utils.h  CMakeLists.txt  Test.cpp
HunterRuntime/magisk_module/template/magisk_module/: module.prop  post-fs-data.sh  service.sh
HunterRuntime/test/: build.gradle
HunterRuntime/test/release/: output-metadata.json
HunterRuntime/test/src/main/: AndroidManifest.xml
HunterRuntime/test/src/main/cpp/: CMakeLists.txt  main.cpp  main.h  test.cpp  test.h
HunterRuntime/test/src/main/cpp/dlfc/: dlfcn_compat.cpp  dlfcn_compat.h  dlfcn_nougat.cpp  dlfcn_nougat.h  elf_util.cpp  lsp_elf_util.h
HunterRuntime/test/src/main/cpp/utils/: Log.h  logging.h
HunterRuntime/test/src/main/res/layout/: activity_main.xml
HunterRuntime/test/src/main/res/values/: themes.xml
HunterRuntime/test/src/main/res/values-night/: themes.xml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  lsposed_detect.cpp
app/src/main/kotlin/com/anycheck/app/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
(+760 files in other folders)
